add two additional address endpoints
