# src/main/java/com/github/janrahman/postaddress_address_book/address/AddressRepositoryApi.java
@@ -1,7 +1,12 @@
 package com.github.janrahman.postaddress_address_book.address;
 
 import com.github.janrahman.postaddress_address_book.jooq.model.tables.records.AddressesRecord;
+import com.github.janrahman.postaddress_address_book.openapi.model.Address;
+import com.github.janrahman.postaddress_address_book.openapi.model.NewAddress;
 import com.github.janrahman.postaddress_address_book.openapi.model.UpdateAddress;
+import java.util.List;
+import java.util.stream.Stream;
+import org.springframework.lang.NonNull;
 
 public interface AddressRepositoryApi {
 
@@ -11,5 +16,9 @@ public interface AddressRepositoryApi {
 
   AddressesRecord findById(long it);
 
-  AddressesRecord update(long id, UpdateAddress updateAddress);
+  AddressesRecord update(long id, @NonNull UpdateAddress updateAddress);
+
+  Stream<AddressesRecord> findAll();
+
+  AddressesRecord create(@NonNull NewAddress newAddress);
 }
